Add user profile fields and article cover enhancements
Changes in design and other important details

--- a/templates/accounts/password_reset_confirm.html
+++ b/templates/accounts/password_reset_confirm.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Verify Code - PC News{% endblock %}
+{% block title %}Verify Code - Cetix{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -46,3 +46,4 @@
     </p>
 </div>
 {% endblock %}
+
