--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Verification Sent - PC News{% endblock %}
+{% block title %}Verification Sent - Cetix{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -17,3 +17,4 @@
     </div>
 </div>
 {% endblock %}
+
