--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Register - PC News{% endblock %}
+{% block title %}Register - Cetix{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -29,3 +29,4 @@
     <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 </div>
 {% endblock %}
+
