--- a/templates/articles/article_confirm_delete.html
+++ b/templates/articles/article_confirm_delete.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Delete Article - PC News{% endblock %}
+{% block title %}Delete Article - Cetix{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -13,3 +13,4 @@
     </form>
 </div>
 {% endblock %}
+
