--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Logged Out - PC News{% endblock %}
+{% block title %}Logged Out - Cetix{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -8,3 +8,4 @@
     <p><a href="{% url 'login' %}">Login again</a> or return to the <a href="{% url 'articles:article_list' %}">home page</a>.</p>
 </div>
 {% endblock %}
+
