--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Login - PC News{% endblock %}
+{% block title %}Login - Cetix{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -20,3 +20,4 @@
     <p>Need an account? <a href="{% url 'accounts:register' %}">Register</a></p>
 </div>
 {% endblock %}
+
