--- a/templates/accounts/password_reset_request.html
+++ b/templates/accounts/password_reset_request.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Forgot Password - PC News{% endblock %}
+{% block title %}Forgot Password - Cetix{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -23,3 +23,4 @@
     </p>
 </div>
 {% endblock %}
+
