--- a/templates/accounts/user_list.html
+++ b/templates/accounts/user_list.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}User Management - PC News{% endblock %}
+{% block title %}User Management - Cetix{% endblock %}
 
 {% block content %}
 <h2>User Management</h2>
@@ -62,3 +62,4 @@
     </table>
 </div>
 {% endblock %}
+
