--- a/templates/articles/author_list.html
+++ b/templates/articles/author_list.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Authors - PC News{% endblock %}
+{% block title %}Authors - Cetix{% endblock %}
 
 {% block content %}
 <h2>Authors</h2>
@@ -15,3 +15,4 @@
     {% endfor %}
 </div>
 {% endblock %}
+
