--- a/templates/articles/category_list.html
+++ b/templates/articles/category_list.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
-{% block title %}Categories - PC News{% endblock %}
+{% block title %}Categories - Cetix{% endblock %}
 
 {% block content %}
 <h2>Categories</h2>
@@ -13,3 +13,4 @@
     {% endfor %}
 </div>
 {% endblock %}
+
