--- a/templates/articles/category_list.html
+++ b/templates/articles/category_list.html
@@ -2,6 +2,10 @@
 
 {% block title %}Categories - Cetix{% endblock %}
 
+{% block hero %}
+{% include "includes/page_hero.html" %}
+{% endblock %}
+
 {% block content %}
 <h2>Categories</h2>
 <div class="category-grid">
