--- a/templates/articles/author_detail.html
+++ b/templates/articles/author_detail.html
@@ -3,8 +3,11 @@
 
 {% block title %}{{ author.username }} - Cetix{% endblock %}
 
+{% block hero %}
+{% include "includes/page_hero.html" %}
+{% endblock %}
+
 {% block content %}
-<h2>Articles by {{ author.username }}</h2>
 <div class="article-grid">
     {% for article in articles %}
         <article class="card" data-article-card="{{ article.slug }}">
