--- a/templates/articles/author_list.html
+++ b/templates/articles/author_list.html
@@ -2,6 +2,10 @@
 
 {% block title %}Authors - Cetix{% endblock %}
 
+{% block hero %}
+{% include "includes/page_hero.html" %}
+{% endblock %}
+
 {% block content %}
 <h2>Authors</h2>
 <div class="author-grid">
