--- a/templates/articles/bookmark_list.html
+++ b/templates/articles/bookmark_list.html
@@ -3,8 +3,11 @@
 
 {% block title %}Bookmarks - Cetix{% endblock %}
 
+{% block hero %}
+{% include "includes/page_hero.html" %}
+{% endblock %}
+
 {% block content %}
-<h2>Your Bookmarked Articles</h2>
 <div class="article-grid">
     {% for bookmark in bookmarks %}
         <article class="card" data-article-card="{{ bookmark.article.slug }}">
