--- a/templates/articles/popular_list.html
+++ b/templates/articles/popular_list.html
@@ -4,19 +4,7 @@
 {% block title %}Popular Articles - Cetix{% endblock %}
 
 {% block hero %}
-<section class="hero">
-    <div class="container">
-        <div class="hero-card">
-            <div class="hero-copy">
-                <h2>Community endorsed knowledge</h2>
-                <p>
-                    Dive into the highest scoring articles, carefully curated by fellow engineers who read, review,
-                    and react to the most impactful stories around the globe.
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
+{% include "includes/page_hero.html" %}
 {% endblock %}
 
 {% block content %}
