--- a/templates/articles/author_detail.html
+++ b/templates/articles/author_detail.html
@@ -40,5 +40,6 @@
         <p class="empty-state">This author has no published articles yet.</p>
     {% endfor %}
 </div>
-{% endblock %}
 
+{% include "includes/pagination.html" %}
+{% endblock %}
