--- a/templates/articles/bookmark_list.html
+++ b/templates/articles/bookmark_list.html
@@ -49,5 +49,6 @@
         <p class="empty-state">You have no bookmarks yet.</p>
     {% endfor %}
 </div>
-{% endblock %}
 
+{% include "includes/pagination.html" %}
+{% endblock %}
