--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -47,16 +47,5 @@
     {% endfor %}
 </div>
 
-{% if is_paginated %}
-    <div class="card">
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-        {% endif %}
-        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">Next</a>
-        {% endif %}
-    </div>
-{% endif %}
+{% include "includes/pagination.html" %}
 {% endblock %}
-
