--- a/templates/articles/category_detail.html
+++ b/templates/articles/category_detail.html
@@ -41,16 +41,6 @@
     {% endfor %}
 </div>
 
-{% if is_paginated %}
-    <div class="card">
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-        {% endif %}
-        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">Next</a>
-        {% endif %}
-    </div>
-{% endif %}
-{% endblock %}
+{% include "includes/pagination.html" %}
 
+{% endblock %}
