--- a/templates/articles/popular_list.html
+++ b/templates/articles/popular_list.html
@@ -46,5 +46,6 @@
         <p class="empty-state">No popular articles yet.</p>
     {% endfor %}
 </div>
-{% endblock %}
 
+{% include "includes/pagination.html" %}
+{% endblock %}
