--- a/templates/base.html
+++ b/templates/base.html
@@ -61,16 +61,30 @@
             </div>
         </div>
     </header>
-    {% block hero %}{% endblock %}
-    <main class="container main-content">
-        {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                    <li class="message {{ message.tags }}">{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-        {% block content %}{% endblock %}
+    <main class="main-frame">
+        <div class="container main-layout">
+            <aside class="side-column side-column-primary">
+                {% block sidebar_primary %}
+                    {% include "includes/sidebar_primary.html" %}
+                {% endblock %}
+            </aside>
+            <section class="feed-column">
+                {% block hero %}{% endblock %}
+                {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                            <li class="message {{ message.tags }}">{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                {% block content %}{% endblock %}
+            </section>
+            <aside class="side-column side-column-secondary">
+                {% block sidebar_secondary %}
+                    {% include "includes/sidebar_secondary.html" %}
+                {% endblock %}
+            </aside>
+        </div>
     </main>
     <footer class="site-footer">
         <div class="container footer-inner">
