--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -24,7 +24,11 @@
                 <p class="message error">{{ error }}</p>
             {% endfor %}
         {% endfor %}
-        <button class="button" type="submit">Register</button>
+        <div class="form-actions stacked">
+            <button class="button primary wide" type="submit">
+                <span>Register</span>
+            </button>
+        </div>
     </form>
     <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 </div>
